added new css and html files
after learning css i tried to add css to my old portfolio.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>My Resume</title>
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caveat:wght@600&family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="first">
     <h1>Mohd Suhail Ansari</h1>
-    <img src="./assets/IMG_20210330_120536.jpg" height="200" alt="My profile photo"/>
+    <img id="self" src="./assets/IMG_20210330_120536.jpg" height="200" alt="My profile photo"/>
     <p>I am an aspiring software engineer and this is my online resume. </p>
+    </div>
     <hr/>
+    <div id="second">
     <h2>Education</h2>
     <ol>
         <li>High School
@@ -30,28 +40,39 @@
             </ul>
         </li>
     </ol>
+    </div>
     <hr/>
+    <div id="third">
     <h2>Skills</h2>
     <ul>
         <li>C Programming</li>
         <li>Java Programming</li>
         <li>Web Development(HTML)</li>
     </ul>
+    </div>
     <hr/>
+    <div id="fourth">
     <h2>Hobbies</h2>
     <ul>
         <li>Programming</li>
         <li>Gaming</li>
         <li>Cycling</li>
     </ul>
+    </div>
     <hr/>
+    <div id="certificates">
     <a href="./Public/certificates.html"><h2>Certificates</h2></a>
     <img src="./assets/Screenshot 2023-09-25 195413.png" height="200" alt="Screenshot of the Certificate page."/>
+    </div>
     <hr/>
+    <div id="projects">
     <a href="./Public/projects.html"><h2>Projects</h2></a>
     <img src="./assets/Screenshot 2023-09-25 200611.png" height="200" alt="Screenshot of the Projects page."/>
+    </div>
     <hr/>
+    <div id="footer">
     <a href="./Public/contact.html">Contact Me</a>
     <footer>Mohd Suhail Ansari | 25/09/2023</footer>
+    </div>
 </body>
 </html>
