--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <li>High School
             <ul>
                 <li>School - City Montessori School</li>
-                <li>Year - 2019</li>
+                <li>Year - 20XX</li>
             </ul>
         </li>
         <li>Intermediate
             <ul>
                 <li>School - City Montessori School</li>
-                <li>Year - 2021</li>
+                <li>Year - 20XX</li>
             </ul>
         </li>
         <li>B.Tech
             <ul>
                 <li>College - Dr. Shakuntala Misra National Rehabilitation University</li>
-                <li>Year of Graduation - 2026</li>
+                <li>Year of Graduation - 20XX</li>
             </ul>
         </li>
     </ol>
@@ -76,3 +76,4 @@
 </body>
 
 </html>
+
